<resources>
    <string name="app_name">Furry Thinker</string>
    <string name="sendMessage">Send a message...</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="new_chat">New Chat</string>
    <string name="errorExecuteRequest">Something went wrong</string>
    <string name="deletion_confirmation">Deletion confirmation</string>
    <string name="question_delete_this_chat">Are you sure you want to delete this chat?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="question_delete_all_chat">Are you sure you want to delete all chat?</string>
    <string name="clearAllChats">Clear all chats</string>
    <string name="copy_code">Copy code</string>
    <string name="messageCopied">Message copied</string>
    <string name="you">You</string>
    <string name="catgpt_premium">Furry Thinker PREMIUM:</string>
    <string name="unknown_error">Oops... An unknown error has occurred.</string>
    <string name="ad_is_not_available">Ad viewing is not available. Try later.</string>
    <string name="months12">12 Months</string>
    <string name="months3">3 Months</string>
    <string name="month1">1 Month</string>
    <string name="cost_unknown">Cost unknown</string>
    <string name="buy_premium">Buy PREMIUM</string>
    <string name="premium">Premium</string>
    <string name="thinking">thinking</string>
    <string name="processing">processing</string>
    <string name="suggest_01">When is  the best time  to plant  tomatoes?</string>
    <string name="suggest_02">Explain  quantum  computing in  simple terms</string>
    <string name="suggest_03">Can AI be dangerous?</string>
    <string name="suggest_04">Can AI replace human jobs?</string>
    <string name="suggest_05">Tell me a joke.</string>
    <string name="suggest_06">How to cook Pizza?</string>
    <string name="suggest_07">How to cook Tacos?</string>
    <string name="suggest_08">How to cook Spaghetti?</string>
    <string name="suggest_09">How to cook Ramen?</string>
    <string name="suggest_10">How to cook Sushi?</string>
    <string name="suggest_11">How to improve Communication skill?</string>
    <string name="suggest_12">How to improve Leadership skill?</string>
    <string name="suggest_13">How to improve creativity skill?</string>
    <string name="suggest_14">How do I fix laptop won\'t turn on?</string>
    <string name="suggest_15">How do I fix blue screen of death (BSOD)?</string>
    <string name="suggest_16">What dinosaur has 500 teeth</string>
    <string name="suggest_17">How many centimeters is an inch</string>
    <string name="suggest_18">How to delete instagram account</string>
    <string name="suggest_19">How many weeks in a year</string>
    <string name="suggest_20">How to make banana bread</string>
    <string name="suggest_21">How many milliliters in a glass</string>
    <string name="suggest_22">When is easter 2023</string>
    <string name="suggest_23">How many ounces in a gallon</string>
    <string name="suggest_24">How to screenshot on mac</string>
    <string name="suggest_25">What space movie came out in 1992</string>
    <string name="suggest_26">What time is it in california</string>
    <string name="suggest_27">How long to boil eggs</string>
    <string name="suggest_28">How many states in india</string>
    <string name="suggest_29">How many calories are in an apple</string>
    <string name="suggest_30">How many people are in the world</string>
    <string name="suggest_31">What are the basic principles of healthy eating?</string>
    <string name="suggest_32">What are the causes of global warming?</string>
    <string name="suggest_33">How to remove stains from clothes?</string>
    <string name="suggest_34">What are the symptoms of the flu and how to treat it?</string>
    <string name="suggest_35">What are the best ways to combat insomnia?</string>
    <string name="suggest_36">What are the most effective exercises for weight loss?</string>
    <string name="suggest_37">How to improve memory and concentration?</string>
    <string name="suggest_38">What are the best diets for weight loss?</string>
    <string name="suggest_39">How to speed up metabolism and burn fat?</string>
    <string name="suggest_40">What are the best ways to relieve stress?</string>
    <string name="suggest_41">What are the most effective methods of wrinkle reduction?</string>
    <string name="suggest_42">How to choose the best furniture for your home?</string>
    <string name="suggest_43">What are the best business management techniques?</string>
    <string name="suggest_44">What are the most common illnesses and how to treat them?</string>
    <string name="suggest_45">What are the most effective ways to relieve allergies?</string>
    <string name="suggest_46">What are the most common symptoms of depression and how to treat it?</string>
    <string name="suggest_47">How to manage personal finances and budgeting?</string>
    <string name="suggest_48">What are the best ways to fight chronic fatigue?</string>
    <string name="suggest_49">How to improve communication skills?</string>
    <string name="suggest_50">How to choose the right mobile phone?</string>
    <string name="suggest_51">What are the best places for travel?</string>
    <string name="suggest_52">What are the most delicious recipes for cooking at home?</string>
    <string name="suggest_53">What are the best books to read?</string>
    <string name="suggest_54">What are the best ways to fight a cold?</string>
    <string name="suggest_55">What are the best ways to protect your computer from viruses?</string>
    <string name="suggest_56">What are the most effective methods of photo enhancement?</string>
    <string name="suggest_57">What are the best ways to combat acne?</string>
    <string name="suggest_58">How to prepare for a job interview?</string>
    <string name="suggest_59">What are the most effective diets for fast weight loss?</string>
    <string name="suggest_60">What diets are considered healthy for weight loss?</string>
    <string name="suggest_61">What are the most popular weight loss diets?</string>
    <string name="suggest_62">What plant-based diets help you lose weight?</string>
    <string name="suggest_63">What protein-based diets help you lose weight?</string>
    <string name="suggest_64">What carbohydrate-based diets help you lose weight?</string>
    <string name="suggest_65">What are the most popular cities for tourists?</string>
    <string name="suggest_66">What are the most popular countries for tourists?</string>
    <string name="suggest_67">What are the most popular beaches for relaxing?</string>
    <string name="suggest_68">What are the most popular ski resorts for holidays?</string>
    <string name="suggest_69">What are the most popular holiday islands?</string>
    <string name="suggest_70">What are the most popular tourist attractions?</string>
    <string name="suggest_71">What are the most popular amusement parks for recreation?</string>
    <string name="suggest_72">What are the most popular seaside resorts?</string>
    <string name="suggest_73">What are the most popular mountain resorts for recreation?</string>
    <string name="suggest_74">What are the most popular tourist routes?</string>
    <string name="suggest_75">What are the most popular exotic vacation spots?</string>
    <string name="suggest_76">What are the most popular places for romantic trips?</string>
    <string name="suggest_77">What are the most popular places for outdoor activities?</string>
    <string name="suggest_78">What are the most popular family vacation destinations?</string>
    <string name="suggest_79">What are the most popular places for cultural recreation?</string>
    <string name="suggest_80">What are the most popular places to travel by car?</string>
    <string name="suggest_81">What are the most popular places to travel by bike?</string>
    <string name="suggest_82">What are the most popular yacht charter destinations?</string>
    <string name="suggest_83">What are the most popular places to travel by train?</string>
    <string name="suggest_84">What are the most popular places to travel by plane?</string>
    <string name="suggest_85">How to choose the best laptop?</string>
    <string name="suggest_86">How to choose the best smartphone?</string>
    <string name="suggest_87">How to choose the best tablet?</string>
    <string name="suggest_88">How to choose the best TV?</string>
    <string name="suggest_89">How to choose the best SLR camera?</string>
    <string name="suggest_90">How to choose the best refrigerator?</string>
    <string name="suggest_91">How to choose the best washing machine?</string>
    <string name="suggest_92">How to choose the best vacuum cleaner?</string>
    <string name="suggest_93">How to choose the best air conditioner?</string>
    <string name="suggest_94">How to choose the best humidifier?</string>
    <string name="suggest_95">How to choose the best heater?</string>
    <string name="suggest_96">How to choose the best lawn mower?</string>
    <string name="suggest_97">How to choose the best blender?</string>
    <string name="suggest_98">How to choose the best mixer?</string>
    <string name="suggest_99">How to choose the best multicooker?</string>
    <string name="suggest_100">How to choose the best coffee grinder?</string>
    <string name="suggest_101">How to choose the best electric kettle?</string>
    <string name="suggest_102">How to choose the best wireless headphones?</string>
    <string name="suggest_103">How to choose the best gaming computer?</string>
    <string name="suggest_104">How to choose the best smart home?</string>
    <string name="suggest_105">How to choose a gift for a girl?</string>
    <string name="suggest_106">How to choose a gift for a guy?</string>
    <string name="suggest_107">How to choose a gift for mom?</string>
    <string name="suggest_108">How to choose a gift for dad?</string>
    <string name="suggest_109">How to choose a gift for your wife?</string>
    <string name="suggest_110">How to choose a gift for your husband?</string>
    <string name="suggest_111">How to choose a gift for your sister?</string>
    <string name="suggest_112">How to choose a gift for a brother?</string>
    <string name="suggest_113">How to choose a gift for a friend?</string>
    <string name="suggest_114">How to choose a gift for a colleague?</string>
    <string name="suggest_115">How to choose a gift for the boss?</string>
    <string name="suggest_116">How to choose a gift for a teacher?</string>
    <string name="suggest_117">How to choose a gift for mother-in-law?</string>
    <string name="suggest_118">How to choose a gift for the father-in-law?</string>
    <string name="suggest_119">How to choose a gift for children?</string>
    <string name="suggest_120">How to choose a gift for a friend?</string>
    <string name="suggest_121">How to choose a gift for grandma?</string>
    <string name="suggest_122">How to choose a gift for grandfather?</string>
    <string name="suggest_123">How to choose a birthday present?</string>
    <string name="suggest_124">How to choose a gift for the New Year?</string>
    <string name="suggest_125">How many ounces in a cup</string>
    <string name="min_length_3_characters">Text must contain at least 3 characters</string>
    <string name="max_length_40_characters">Text must contain no more than 40 characters</string>
    <string name="apply">Apply</string>
    <string name="edit_chat_name">Edit chat name</string>
    <string name="and_much_more">And much more ...</string>
    <string name="how_i_can_help_you">How i can help you:</string>
    <string name="start_chat">START CHAT</string>
    <string name="available_requests">Available requests:</string>
    <string name="show_ad">Show AD</string>
</resources>