<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background">

    <ImageView
        android:id="@+id/closeDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_gravity="end"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_requests"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:textColor="#694C00"
        android:textSize="24sp"
        android:visibility="visible"
        app:autoSizeMaxTextSize="24sp"
        app:autoSizeMinTextSize="18sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"/>

    <TextView
        android:id="@+id/quantityTokenDialog"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_token_dialog"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="8"
        android:text="5"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="visible"
        android:padding="3dp"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showAdDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:backgroundTint="@null"
        android:background="@drawable/background_button_start_chat"
        android:shadowColor="@color/black"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="10"
        app:drawableEndCompat="@drawable/icon_ad"
        android:text="@string/show_ad"
        app:iconPadding="24dp"
        android:textColor="@color/white"
       />

    <Button
        android:id="@+id/buyPremiumChatButtonDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button_premium_chat"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:shadowColor="@color/black"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="10"
        android:layout_marginTop="8dp"
        android:text="@string/buy_premium"
        app:backgroundTint="@null"
        android:textColor="@color/white"
         />


</LinearLayout>