<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainPageWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">
    <!-- Верхняя часть страницы с текстовым полем и меню -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <!-- Иконка с меню -->
        <ImageView
            android:id="@+id/chatsIconMainPage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:elevation="2dp"
            android:src="@drawable/menu_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/chatGptIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:maxWidth="140dp"
            android:shadowColor="@color/black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="8"
            android:gravity="center"
            android:src="@drawable/baseline_menu_24"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="visible"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:gravity="end"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chatGptIcon"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:id="@+id/showAdsLinerLayoutMainPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/quantityTokenMainPage"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_token"
                    android:gravity="center"
                    android:maxWidth="80dp"
                    android:maxHeight="26dp"
                    android:minWidth="40dp"
                    android:padding="2dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="4"
                    android:shadowDy="4"
                    android:shadowRadius="8"
                    android:layout_gravity="center"
                    android:text="5"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="visible"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <ImageView
                    android:id="@+id/addTokensImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/icon_plus_ads" />
            </LinearLayout>
            <TextView
                android:id="@+id/requestRespawnTimerMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:visibility="gone"
                android:text="00:00:00"/>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/premiumExistLabelWrapper"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/premiumExistLabel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="8"
            android:src="@drawable/baseline_menu_24"
            android:text="@string/premium"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/catLogoWrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/catLogoImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            app:srcCompat="@drawable/main_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/startChatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:backgroundTint="@null"
                    android:background="@drawable/background_button_start_chat"
                    android:shadowColor="@color/black"
                    android:shadowDx="4"
                    android:shadowDy="4"
                    android:shadowRadius="10"
                    android:text="@string/start_chat"
                    android:textColor="@color/white"
                    app:autoSizeMaxTextSize="12sp"
                    app:autoSizeMinTextSize="8sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />


                <Button
                    android:id="@+id/buyPremiumChatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/background_button_premium_chat"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="4"
                    android:shadowDy="4"
                    android:shadowRadius="10"
                    app:autoSizeMaxTextSize="12sp"
                    app:autoSizeMinTextSize="8sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform"
                    android:text="@string/buy_premium"
                    app:backgroundTint="@null"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>